[package]
name = "reflink-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
nix = { version = "0.27", features = ["mount"] }
rand = "0.8"
humantime = "2.1"
tabled = "0.15"
chrono = { version = "0.4", features = ["serde"] }